# random_number_generation_and_rational_rithmetic

./: CMakeLists.txt  IDENTIFICATION.txt
app/: test_random.cpp  test_rational.cpp
boost_timer/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  timer.cpp
buggy/: CMakeLists.txt  Sanitizers.cmake  buggy.cpp
cgal_in_circle/: CMakeLists.txt  in_circle.cpp  in_sphere.cpp  utility.cpp  utility.hpp
coverage/: CMakeLists.txt  CodeCoverage.cmake  random.cpp  run_tests
fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  main.cpp
hg2g/: CMakeLists.txt
hg2g/include/: CMakeLists.txt
hg2g/include/hg2g/: hg2g.hpp
hg2g/lib/: CMakeLists.txt  answer.cpp  question.cpp
hg2g/src/: CMakeLists.txt  answer.cpp
include/ra/: random.hpp  rational.hpp
lib/: random.cpp
